sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(){
  var j=1
  while(j=1)
  {
    for (i<-0 to getNombreValeurs()-2) 
  	{
    	if(!plusPetit(i,i+1))
    	{  
      	echange(i,i+1)
      	j = 1
    	}
  	}
  }
}